<resources>
    <string name="app_name">EasyEatClient</string>

    <string name="facebook_app_id">943414702435070</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="takephoto">Take photo</string>
    <string name="choosephoto">Choose form Photos</string>
    <string name="cancle">Cancle</string>
    <string name="logout">Log out</string>
    <string name="myProfile">My profile</string>
    <string name="myFavorite">My favorite</string>
    <string name="myOrder">My order</string>
    <string name="myReview">My review</string>
    <string name="save">Save</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="sign_out">Sign Out</string>
    <string name="loading">Loading...</string>


    <!--order food activity-->
    <string name="order_finish">done</string>
    <string name="totalPrice">TOTAL</string>
    <string name="totalNum"></string>
</resources>
