<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:background="@android:color/transparent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/pop_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@color/colorWhite"
            android:id="@+id/takePhotoBtn"
            android:text="@string/takephoto"
            android:textSize="@dimen/textSize"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight" />
        <Button
            android:background="@color/colorWhite"
            android:id="@+id/choosePhotoBtn"
            android:text="@string/choosephoto"
            android:textSize="@dimen/textSize"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight" />

        <Button
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/item_top_margin"
            android:id="@+id/cancleBtn"
            android:text="@string/cancle"
            android:textSize="@dimen/textSize"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight" />
    </LinearLayout>
</RelativeLayout>